chore: allow prizes image separate upload
